# Go2_dddmr

./: .gitignore  1.md  AGENTS.md  README.md  base_link_axis_issue_go2_navigation.md  dddmr_lego_loam_offline_mapping_notes.md  dddmr_navigation_issues_qa_2026-07-01.md  go2_sport_yaw_issue_solution_20260703 (1).md  go2_xt16_axis_tilt_solution_20260703.md  go2_xt16_dddmr_mapping_record_remote.sh  go2_xt16_live_navigation_solution_20260703.md  run_go2_xt16_map_point_delete.sh  方案.md
dddmr_navigation/src/dddmr_beginner_guide/: CMakeLists.txt  download_files.bash  package.xml  run_x64_gazebo.bash  run_x64_navigation.bash
dddmr_navigation/src/dddmr_beginner_guide/config/: go2_xt16_my_route_a_return_test.yaml  go2_xt16_navigation.yaml  go2_xt16_ramp_stair_site_profile.template.yaml  go2_xt16_relocalization.yaml
dddmr_navigation/src/dddmr_beginner_guide/launch/: go2_xt16_navigation.launch  go2_xt16_outdoor_indoor_mission.launch  go2_xt16_perception_test_rviz.launch  go2_xt16_recorded_route_navigation.launch
dddmr_navigation/src/dddmr_beginner_guide/rviz/: go2_xt16_navigation.rviz  go2_xt16_perception_test.rviz
dddmr_navigation/src/dddmr_beginner_guide/scripts/: audit_go2_navigation_request_echo.py  go2_gait_monitor_policy.py  go2_gait_state_monitor.py  go2_nav_cmd_gate.py  go2_nav_gate_policy.py  go2_pointcloud_stream_gate.py  go2_sport_cmd_vel_adapter.py  go2_sport_cmd_vel_dry_run.py  go2_sport_request_policy.py
dddmr_navigation/src/dddmr_beginner_guide/test/: test_go2_dds_receive_buffers.py  test_go2_gait_monitor_policy.py  test_go2_nav_gate_policy.py  test_go2_pointcloud_stream_gate.py  test_go2_sport_request_policy.py  test_go2_xt16_terrain_site_profile.py
dddmr_navigation/src/dddmr_lego_loam/cloud_msgs/: CMakeLists.txt  package.xml
dddmr_navigation/src/dddmr_pcl/: CMakeLists.txt  LICENSE  package.xml
dddmr_navigation/src/dddmr_perception_3d/: CMakeLists.txt  README.md  download_files.bash  package.xml  perception_3d_plugins.xml
dddmr_navigation/src/dddmr_perception_3d/launch/: mapcloud_pc_delete_utils.launch  pc_delete_utils.launch  pose_graph_pc_delete_utils.launch
dddmr_navigation/src/dddmr_perception_3d/plugins/: cluster_marking.cpp  multilayer_spinning_lidar.cpp  no_entry_layer.cpp  nothing_layer.cpp  path_blocked_strategy.cpp  speed_limit_layer.cpp  static_layer.cpp  terrain_layer.cpp
dddmr_navigation/src/dddmr_perception_3d/rviz/: mapcloud_pc_delete_utils.rviz  multilayer_spinning_lidar_3d.rviz  pc_delete_utils.rviz  pose_graph_pc_delete_utils.rviz  scanning_lidar_3d.rviz  zone_demo.rviz  zone_editor_utils.rviz
dddmr_navigation/src/dddmr_perception_3d/src/: perception_3d_ros.cpp  sensor.cpp  shared_data.cpp  stacked_perception.cpp
dddmr_navigation/src/dddmr_perception_3d/test/: test_cluster_marking_stair_semantics.cpp  test_graph_safety.cpp  test_stair_riser_semantics.cpp  test_static_ground_generation.cpp  test_static_map_pairing_state.cpp  test_terrain_edge_policy.cpp  test_terrain_freshness.cpp  test_terrain_model_builder.cpp
dddmr_navigation/src/dddmr_pg_map_server/: CMakeLists.txt  README.md  package.xml
dddmr_navigation/src/dddmr_pg_map_server/config/: dddmr_pg_map_server.yaml
dddmr_navigation/src/dddmr_pg_map_server/include/: dddmr_pg_map_server.h  map_artifact_identity.h  terrain_roi_config.h
dddmr_navigation/src/dddmr_pg_map_server/src/: dddmr_pg_map_server.cpp  map_artifact_identity.cpp
dddmr_navigation/src/dddmr_pg_map_server/test/: test_map_artifact_identity.cpp  test_pg_map_server.cpp  test_terrain_roi_config.cpp
dddmr_navigation/src/dddmr_route_navigation/: CMakeLists.txt  package.xml
dddmr_navigation/src/dddmr_route_navigation/config/: go2_xt16_outdoor_indoor_mission.yaml  go2_xt16_recorded_route.yaml
dddmr_navigation/src/dddmr_route_navigation/scripts/: go2_mission_cmd_mux.py  mission_command_mux_policy.py  outdoor_indoor_mission.py  outdoor_indoor_mission_client.py  outdoor_indoor_mission_lib.py  outdoor_indoor_mission_no_motion.py  p2p_mission_executor.py  p2p_waypoint_recorder.py  route_tool.py  waypoint_mission_io.py
dddmr_navigation/src/dddmr_route_navigation/src/: outdoor_indoor_move_base_node.cpp  recorded_route_controller.cpp  recorded_route_move_base_node.cpp  route_tracker.cpp
dddmr_navigation/src/dddmr_route_navigation/test/: test_mission_command_mux_policy.py  test_outdoor_indoor_mission_lib.py  test_p2p_mission_executor.py  test_route_tool.py  test_route_tracker.cpp  test_waypoint_mission_io.py
dddmr_navigation/src/dddmr_rviz_tools/dddmr_rviz_default_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
dddmr_navigation/src/dddmr_scan_planner/: CMakeLists.txt  README.md  package.xml
dddmr_navigation/src/dddmr_scan_planner/config/: go2_xt16_scan_planner.yaml
dddmr_navigation/src/dddmr_scan_planner/launch/: go2_xt16_scan_navigation.launch
dddmr_navigation/src/dddmr_scan_planner/scripts/: scan_mission_executor.py  scan_mission_io.py  scan_waypoint_recorder.py
dddmr_navigation/src/dddmr_scan_planner/src/: command_guard_policy.cpp  scan_command_guard_node.cpp  scan_input_adapter_node.cpp  scan_route_bridge_node.cpp
dddmr_navigation/src/dddmr_scan_planner/test/: test_command_guard_policy.cpp  test_scan_config.py  test_scan_mission_executor.py  test_scan_mission_io.py  test_scan_route_bridge.py
dddmr_navigation/src/dddmr_sys_core/: CMakeLists.txt  README.md  package.xml
dddmr_navigation/src/dddmr_sys_core/action/: GetPlan.action  OutdoorIndoorMission.action  PToPMoveBase.action  TagDocking.action
dddmr_navigation/src/dddmr_sys_core/msg/: TerrainStatus.msg  TerrainTransition.msg
dddmr_navigation/src/dddmr_sys_core/src/: dddmr_enum_states.cpp
dddmr_navigation/src/scan_planner_vendor/bspline_opt/: CMakeLists.txt  package.xml
dddmr_navigation/src/scan_planner_vendor/path_searching/: CMakeLists.txt  package.xml
dddmr_navigation/src/scan_planner_vendor/plan_env/: CMakeLists.txt  package.xml
dddmr_navigation/src/scan_planner_vendor/plan_manage/: CMakeLists.txt  package.xml
dddmr_navigation/src/scan_planner_vendor/traj_utils/: CMakeLists.txt  package.xml
(+431 files in other folders)
