<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dddmr_scan_planner</name>
  <version>0.1.0</version>
  <description>DDDMR adapters and safety gates for the SCAN-Planner local planner.</description>

  <maintainer email="liweimingkk@users.noreply.github.com">DDDMR Go2 maintainers</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dddmr_sys_core</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>scan_planner_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>dddmr_beginner_guide</exec_depend>
  <exec_depend>scan_planner</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
