<?xml version="1.0"?>
<package format="3">
  <name>path_searching</name>
  <version>0.1.0</version>
  <description>Dynamic A-star path search for SCAN-Planner.</description>
  <maintainer email="iszhouxin@zju.edu.cn">SCAN-Planner maintainers</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>
  <depend>plan_env</depend>
  <depend>rclcpp</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
