<?xml version="1.0"?>
<package format="3">
  <name>plan_env</name>
  <version>0.1.0</version>
  <description>Local occupancy map and ray casting for SCAN-Planner.</description>
  <maintainer email="iszhouxin@zju.edu.cn">SCAN-Planner maintainers</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
