<?xml version="1.0"?>
<package format="3">
  <name>traj_utils</name>
  <version>0.1.0</version>
  <description>Trajectory primitives and visualization for SCAN-Planner.</description>
  <maintainer email="iszhouxin@zju.edu.cn">SCAN-Planner maintainers</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>bspline_opt</depend>
  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
